// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generic Resources Resolver Correctly Resolves Create Resources Mutation 1`] = `
Object {
  "data": Object {
    "createResources": Object {
      "errors": Array [],
      "result": Array [
        Object {
          "data": Object {
            "createResources": Object {
              "errors": Array [],
              "result": Array [
                Object {
                  "apiVersion": "policy.open-cluster-management.io/v1",
                  "kind": "Policy",
                  "metadata": Object {
                    "creationTimestamp": "2019-07-24T16:13:38Z",
                    "generation": 1,
                    "name": "test-policy",
                    "namespace": "mcm",
                    "resourceVersion": "1688805",
                    "selfLink": "/apis/policy.open-cluster-management.io/v1/namespaces/mcm/policies/test-policy",
                    "uid": "fec7f06c-ae2d-11e9-8a41-005056a061f1",
                  },
                  "spec": Object {
                    "complianceType": "musthave",
                    "namespaces": Object {
                      "exclude": Array [
                        "kube-*",
                      ],
                      "include": Array [
                        "default",
                      ],
                    },
                    "remediationAction": "inform",
                  },
                },
              ],
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Generic Resources Resolver Correctly Resolves Update Resource Labels Mutation 1`] = `
Object {
  "data": Object {
    "updateResourceLabels": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Nock: No match for request {
  \\"method\\": \\"PATCH\\",
  \\"url\\": \\"http://0.0.0.0/kubernetes/apis/clusterregistry.k8s.io/v1alpha1/namespaces/cluster1/clusters/cluster1\\",
  \\"headers\\": {
    \\"authorization\\": \\"localdev\\",
    \\"content-type\\": \\"application/json-patch+json\\",
    \\"host\\": \\"0.0.0.0\\",
    \\"accept\\": \\"application/json\\",
    \\"content-length\\": 138
  },
  \\"body\\": \\"[{\\\\\\"op\\\\\\":\\\\\\"replace\\\\\\",\\\\\\"value\\\\\\":[{\\\\\\"op\\\\\\":\\\\\\"replace\\\\\\",\\\\\\"path\\\\\\":\\\\\\"/metadata/labels\\\\\\",\\\\\\"value\\\\\\":{\\\\\\"cloud\\\\\\":\\\\\\"IBM\\\\\\",\\\\\\"datacenter\\\\\\":\\\\\\"toronto\\\\\\",\\\\\\"environment\\\\\\":\\\\\\"Dev\\\\\\"}}]}]\\"
}",
      "path": Array [
        "updateResourceLabels",
      ],
    },
  ],
}
`;

exports[`Generic Resources Resolver Correctly Resolves Update Resource Mutation 1`] = `
Object {
  "data": Object {
    "updateResource": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "MCM ERROR cannot find matched resource type",
      "path": Array [
        "updateResource",
      ],
    },
  ],
}
`;
